R1.5	2017-02-15 Bruce Hill
	Fixed some discrepancies between assemble_release_site_inputs_from_term() and
		assemble_release_site_inputs_from_file() by combining them into one function,
		assemble_release_site_inputs() with a batch parameter which is set to True
		for the old from_file() variant or if the --batch option is used on the cmd line.
	Added git-clone-github.sh script from GIT_TOP/package/epics/modules/git-clone-github.sh
	Added a variant called git-bare-repo.sh to facilitate creating bare repos w/ SLAC template
	Adding Kernel Module option to cvsModuleToGit.py

R1.4	2017-02-10 Bruce Hill
	Fixed code in Releaser.py to set release files read-only and dirs writable.
	Also added some code in epics-build.py to derive installTop for EPICS modules when not supplied by cmd line param
	Made epics-checkout default for EPICS_MODULES use new EPICS_SITE_TOP if user changed it.
		Also suppress unneeded PSPKG_ROOT for pre 3.14.12.5 releases as none of them need it.
	Adding RELEASE_NOTES for R1.0, R1.1, R1.2, and R1.3
	Made add-to-env.sh use git-utils-0.3.0 so we can use qgit
	Added Kernel Module option to cvsModuleToGit.py

R1.3	2017-02-06 Bruce Hill
	Lots of cleanup to epics-release so it can pull package
		name from working dir for both svn and git.
	epics-release now works from svn and git working dirs w/ just -r and -m options.

R1.2	2017-02-02 Bruce Hill
	Added conditional tests for creation/update of RELEASE_SITE
		1.  Not if its an EPICS base package, or not an EPICS package at all
		2. Step on a RELEASE_SITE pulled from the repo?
			No for PCDS dest paths, 	Yes for LCLS
	Reorganized a bit to consolidate some cookie cutter code blocks to one function.
	Tweaked output order of macro definitions to more closely match prior eco
		and added some TODO comments re future features
	Added new epics path functions: isBaseTop, isEpicsPackage, isPCDSPath, and get_base_versions.
	Use readlink -f instead of pwd -P for canonical paths.